[gd_scene load_steps=4 format=3 uid="uid://brv5stcrrfl2f"]

[ext_resource type="Texture2D" uid="uid://bdw34d2t2drg6" path="res://assets/Gem.png" id="1_iroiv"]
[ext_resource type="Script" path="res://units/gem/gem.gd" id="1_r76p1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5tv1"]
size = Vector2(2, 2)

[node name="Gem" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_r76p1")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.785398
texture = ExtResource("1_iroiv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
shape = SubResource("RectangleShape2D_f5tv1")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
